# Calculation_of_the_statical_characteristics_of_the_sequence

./: CMakeLists.txt  Calculation_of_the_statical_characteristics_of_the_sequence.sln  README.md  chrono_example.cpp  main.cpp  max.hpp  mean.hpp  min.hpp  pct90.hpp  pct95.hpp  random_shuffle.cpp  statistics.cpp  statistics.hpp  std.hpp
